# sigground

./: .gitignore  Cargo.toml  Justfile  README.md
.cargo/: config.toml
openspec/: config.yaml
openspec/changes/archive/2026-06-29-sigground-grounding-tool/: tasks.md
openspec/changes/rename-to-groundcontrol/: design.md  proposal.md  tasks.md
openspec/changes/rename-to-groundcontrol/specs/rename/: spec.md
openspec/changes/sigground-grounding-tool/: design.md  proposal.md  tasks.md
openspec/changes/sigground-grounding-tool/specs/cli-interface/: spec.md
openspec/changes/sigground-grounding-tool/specs/grounding-check/: spec.md
openspec/changes/sigground-grounding-tool/specs/signature-generation/: spec.md
openspec/changes/sigground-init/: design.md  proposal.md  tasks.md
openspec/changes/sigground-init/specs/init-command/: spec.md
src/: main.rs  types.rs
src/grounders/: mod.rs  rule.rs
src/parse/: helpers.rs  mod.rs
