[package]
name = "groundcontrol"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

# Parsing
tree-sitter = "0.26"
tree-sitter-language-pack = "1"

[dev-dependencies]
tempfile = "3"
